# quadruped_ros2

./: .gitignore  README.md  main.py  package.xml  pyproject.toml  setup.py
launch/: ik_test.launch.py  robot.launch.py
quadruped/: ik_test_node.py  inference_node.py
quadruped/pmtg/: ik.py  trajectory_generator.py
quadruped/utils/: message_processor.py  robot_loader.py
