[project]
name = "quadruped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colcon-common-extensions>=0.3.0",
    "meshcat-shapes>=1.0.0",
    "pin-pink>=3.4.0",
    "qpsolvers[clarabel,cvxopt,daqp,ecos,osqp,piqp,qpalm,quadprog,scs]>=4.8.1",
    "robot-descriptions>=1.21.0",
    "setuptools==58.4.0",
    "debugpy",
]

[project.optional-dependencies]
cpu = ["torch==2.7.1", "torchaudio==2.7.1", "torchvision==0.22.1"]
gpu = ["torch==2.7.1", "torchaudio==2.7.1", "torchvision==0.22.1"]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "gpu" },
]
torchvision = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "gpu" },
]
torchaudio = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "gpu" },
]
